--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/iconhtml.png">
-    <title>Proyewcto HTML5</title>
+    <title>Proyecto HTML5</title>
 </head>
 <body>
     <header>
-        <h1>Proyecto HTML5</h1>
+        <h1>Inicio</h1>
 
         <nav>
             <ul>
