--- a/multimedia.html
+++ b/multimedia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="img/iconhtml.png">
-    <title>Document Multimedia</title>
+    <title>Proyecto HTML5</title>
 </head>
 <body>
     <h1>Proyecto Multimedia</h1>
