--- a/dieta.html
+++ b/dieta.html
@@ -25,6 +25,7 @@
         <section id="Dieta">
             <table border="1">
                 <tr>
+                    <th>Horario</th>
                     <th>Lunes</th>
                     <th>Martes</th>
                     <th>Miércoles</th>
@@ -35,71 +36,73 @@
                 </tr>
                 <tr>
                     <td>8:00 am</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Desayuno</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Desayuno</td>
+                    <td>Desayuno</td>
+                    <td>Desayuno</td>
+                    <td>Desayuno</td>
+                    <td>Desayuno</td>
                 </tr>
                 <tr>
                     <td>9:00 am</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Trabajo</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Trabajo</td>
+                    <td>Trabajo</td>
+                    <td>Trabajo</td>
+                    <td>Trabajo</td>
+                    <td>Trabajo</td>
                 </tr>
                 <tr>
                     <td>6:00 pm</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Salgo del trabajo</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Salgo del trabajo</td>
+                    <td>Salgo del trabajo</td>
+                    <td>Salgo del trabajo</td>
+                    <td>Salgo del trabajo</td>
+                    <td>Salgo del trabajo</td>
                 </tr>
                 <tr>
                     <td>7:00 pm</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>8:00 pm</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Tiempo con mi hija</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Tiempo con mi hija</td>
+                    <td>Tiempo con mi hija</td>
+                    <td>Tiempo con mi hija</td>
+                    <td>Tiempo con mi hija</td>
+                    <td>Tiempo con mi hija</td>
                 </tr>
                 <tr>
                     <td>9:00 pm</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Estudiar</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Estudiar</td>
+                    <td>Estudiar</td>
+                    <td>Estudiar</td>
+                    <td>Estudiar</td>
+                    <td>Estudiar</td>
                 </tr>
                 <tr>
                     <td>10:00 pm</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Hora de dormir</td>
+                    <td>Descanso de mi trabajo</td>
+                    <td>Hora de dormir</td>
+                    <td>Hora de dormir</td>
+                    <td>Hora de dormir</td>
+                    <td>Hora de dormir</td>
+                    <td>Hora de dormir</td>
                 </tr>
             </table>
           
         </section>
     </main>
+
+    <br>
+    <footer>
+        Proyecto de HTML5 con ejercicios de Víctor Robles&copy;2023 <a href="#top">Ir arriba</a>
+    </footer>
 
 
 </body>
