--- a/multimedia.html
+++ b/multimedia.html
@@ -24,17 +24,34 @@
         <h2>Multimedias</h2>
         <section id="multimedia">
 
-            <video src="video/VID-20210709-WA0001.mp4" width="250" controls>
-                No compatible !!
-            </video>
+            <Section>
+                <h3>Video nativo</h3>
+                    <video src="video/VID-20210709-WA0001.mp4" width="250" controls>
+                        No compatible !!
+                    </video>
+            </Section>
             <br>
-            <audio src="audio/One Piece Wano Kuni.mp3" controls>
-                No compatible !!
-            </audio>
-            <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/XaS64rL7t68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+            <section>
+                <h3>Audio nativo</h3>
+                    <audio src="audio/One Piece Wano Kuni.mp3" controls>
+                        No compatible !!
+                    </audio>
+            </section>
+            <br>
+
+            <section>
+                <h3>Video directo de YouTube</h3>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/XaS64rL7t68" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </section>
         </section>
     </main>
+
+    <br>
+    <footer>
+        Proyecto de HTML5 con ejercicios de Víctor Robles&copy;2023 <a href="#top">Ir arriba</a>
+    </footer>
+
+
 </body>
 </html>
