--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="multimedia.html">Multimedia</a></li>
-                <li><a href="dieta.html">Dieta</a></li>
-                <li><a href="#">Menu</a></li>
+                <li><a href="horario.html">Horarios</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
             </ul>
         </nav>
     </header>
@@ -80,6 +80,6 @@
         Proyecto de HTML5 con ejercicios de Víctor Robles&copy;2023 <a href="#top">Ir arriba</a>
     </footer>
 
-    
+
 </body>
 </html>
