--- a/horario.html
+++ b/horario.html
@@ -7,15 +7,15 @@
     <title>Proyecto HTML5</title>
 </head>
 <body>
-    <h1>Proyecto Dieta</h1>
+    <h1>Proyecto Día a Día</h1>
 
     <header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="multimedia.html">Multimedia</a></li>
-            <li><a href="dieta.html">Dieta</a></li>
-            <li><a href="#">Menu</a></li>
+            <li><a href="horario.html">Horarios</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
     </header>
