--- a/multimedia.html
+++ b/multimedia.html
@@ -13,9 +13,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-                <li><a href="multimedia.html">Multimedia</a></li>
-                <li><a href="dieta.html">Dieta</a></li>
-                <li><a href="#">Menu</a></li>
+            <li><a href="multimedia.html">Multimedia</a></li>
+            <li><a href="horario.html">Horarios</a></li>
+            <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
     </header>
