--- a/contactos.html
+++ b/contactos.html
@@ -20,6 +20,51 @@
     </nav>
     </header>
 
+    <main>
+        <section id="contacto">
+            <h2>Contacto</h2>
+                <form>
+                    <div>
+                        <label for="nombre">Nombre</label>
+                        <input type="text" id="nombre">
+                    </div>
+
+                    <div>
+                        <label for="apellido">Apellido</label>
+                        <input type="text" id="apellido">
+                    </div>
+
+                    <div>
+                        <label for="email">email</label>
+                        <input type="email" id="email">
+                    </div>
+
+                    <div>
+                        <label for="edad">Edad</label>
+                        <input type="number" id="edad">
+                    </div>
+
+                    <div>
+                        <label for="genero">Genero</label>
+                        <select name="genero" id="genero">
+                            <option value="hombre">Hombre</option>
+                            <option value="mujer">Mujer</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="motivo">Motivo</label>
+                        <textarea id="motivo"></textarea>
+                    </div>
+
+                    <input type="submit" value="Enviar" id="enviar"/> dcfxv
+
+                </form>
+
+        </section>
+    </main>
+
     
 
     <br>
